--- a/.github/workflows/fih_tests.yaml
+++ b/.github/workflows/fih_tests.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - test-ci
   pull_request:
 
 name: FIH hardening
@@ -53,10 +53,10 @@ jobs:
         FIH_ENV: ${{ matrix.fih_env }}
       run: |
         ./ci/fih-tests_run.sh
-        echo "test output: " $FAILED_COUNT
     - name: Check for output
-      if: ${{ env.DAMAGE_TYPE }} != "8,10" && ${{ env.FAILED_COUNT }} != 0
+      if: ${{ env.SKIP_SIZE }} != "8,10" && ${{ env.FAILED_COUNT }} != 0
       run: |
+        echo "test output: " $env.FAILED_COUNT "damage type:" $env.SKIP_SIZE
         echo "::error Tests failed to execute successfully"
         exit 1
 
