--- a/.github/workflows/fih_tests.yaml
+++ b/.github/workflows/fih_tests.yaml
@@ -53,10 +53,12 @@ jobs:
         FIH_ENV: ${{ matrix.fih_env }}
       run: |
         ./ci/fih-tests_run.sh
-    - name: Check for output
-      if: ${{ env.SKIP_SIZE }} != "8,10" && ${{ env.FAILED_COUNT }} != 0
+    - name: Output env vars
       run: |
         echo "test output: " $env.FAILED_COUNT "damage type:" $env.SKIP_SIZE
+    - name: Check for output
+      if: ${{ env.SKIP_SIZE }} != "8,10" && ${{ env.FAILED_COUNT }} != "0"
+      run: |
         echo "::error Tests failed to execute successfully"
         exit 1
 
